[package]
name = "discriminator-directory"
version = "0.1.0"
edition = "2021"

[features]
mock = []

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
arangors = "0.6.0"
bincode = "1.3.3"
hex = "0.4.3"
log = "0.4.22"
mockall = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
solana-client = "2.0.11"
solana-sdk = "2.0.11"
solana-transaction-status = "2.0.13"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-retry = "0.3.0"
